objects/Phone_Number__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Phone Numbers</relationshipLabel>
        <relationshipName>Phone_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Belongs_to_name_relationship__c</fullName>
        <label>Belongs to (name/relationship)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Mobile_2_0__c</fullName>
        <formula>Account_Name__r.PersonContact.MobilePhone</formula>
        <label>2.0 Consumer Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_Call_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Call List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_DNC_Scrub_Date__c</fullName>
        <label>Last DNC Scrub Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Neustar_Business_Phone_Indicator_Attr__c</fullName>
        <inlineHelpText>B - Business phone associated. 
C - Residential Phone associated with a consumer.
D - Dual Phone associated with both business &amp; consumer. 
U - Unknown
&lt;blank&gt; - No phone information was found</inlineHelpText>
        <label>Neustar Business Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Business_Phone_Indicator__c</fullName>
        <inlineHelpText>B - Phone is Business or Dual Phone 
C - Phone is a Consumer Phone
U - No Phone Input or Unknown
&lt;blank&gt; - Phone is invalid or toll free</inlineHelpText>
        <label>Neustar Business Phone Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_DA_Connection__c</fullName>
        <inlineHelpText>C - Connected.  Confirmed through a current published source. 
D - Delisted. Subject has called to disconnect or deist their telephone number.  
U - Unknown.  Cannot be verified through a published source. 
&lt;blank&gt; - Phone is invalid or toll free</inlineHelpText>
        <label>Neustar DA Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Daylight_Savings__c</fullName>
        <inlineHelpText>N - No 
Y - Yes
&lt;blank&gt; - Invalid or toll free</inlineHelpText>
        <label>Neustar Daylight Savings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_In_Service_Indicator__c</fullName>
        <inlineHelpText>A1 - &lt;1 Month Active
A2 - 2 
A3 - 3 
A4 - 4-6 
A5 - 7-9 
A6 - 10-11 
A7 - &gt;12 
I1 - &lt;1 Month Inactive
I2 - 2 
I3 - 3  
I4 - 4-6 
I5 - 7-9 
I6 - 10-11 
I7 - &gt;12 Months
U - Unknown
&lt;blank&gt; - No phone information was found</inlineHelpText>
        <label>Neustar In-Service Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_MPIC_Phone_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>0 - 100 score of likelihood of contacting the entity on the phone number given the specified input phone</inlineHelpText>
        <label>Neustar MPIC - Phone Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Mobile__c</fullName>
        <inlineHelpText>Y - Mobile Phone
&lt;blank&gt; - Not a mobile phone or phone type is unknown</inlineHelpText>
        <label>Neustar Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Phone_Activity__c</fullName>
        <inlineHelpText>0 - No recent activity seen. 
1 - Recent activity seen.
&lt;blank&gt; - Phone is invalid or toll free</inlineHelpText>
        <label>Neustar Phone Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Phone_Type_Indicator__c</fullName>
        <inlineHelpText>W - Wireless
L - Landlines
U - Unknown
&lt;blank&gt; - No phone information was found</inlineHelpText>
        <label>Neustar Phone Type Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Phone_Validation__c</fullName>
        <inlineHelpText>1 - Phone is dialable
0 - No input or cannot be validated 
-1 - Phone is not dialable
&lt;blank&gt; - Not a mobile phone or phone type is unknown</inlineHelpText>
        <label>Neustar Phone - Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Postal_State_Code__c</fullName>
        <inlineHelpText>&lt;code&gt; - 2 character state abbreviation
&lt;blank&gt; - Phone is invalid or toll free</inlineHelpText>
        <label>Neustar Postal State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Prepaid_Phone_Attributes__c</fullName>
        <inlineHelpText>Y - Phone Number is a prepaid phone. 
N - No data is available to determine prepaid status. 
&lt;blank&gt; - No phone information was found</inlineHelpText>
        <label>Neustar Prepaid Phone Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Service_Discontinued_Indicator__c</fullName>
        <inlineHelpText>0 - None 
1 - &lt; 60 Days 
2 - 61 - 90 Days Ago 
3 - 91 - 120 
4 - 121 - 210 
5 - 211 - 300 
6 - 301 - 390 
7 - &gt; 390 Days Ago 
&lt;blank&gt; - No phone information was found</inlineHelpText>
        <label>Neustar Service Discontinued Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Time_Zone__c</fullName>
        <inlineHelpText>0 - Not Applicable
1 - Samoa 
2 - Hawaii
3 - Alaska/Yukon
4 - Pacific 
5 - Mountain 
6 - Central 
7 - Eastern 
8 - Atlantic 
9 - Newfoundland
&lt;blank&gt; - Phone is invalid or toll free</inlineHelpText>
        <label>Neustar Time Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by onclick javascript button which signals to the Phone Number trigger that a manual Phone Attr callout to Neustar has been submitted</description>
        <label>Neustar Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neustar_Verification_Date__c</fullName>
        <inlineHelpText>&lt;blank&gt; - Neustar call out hasn&apos;t been made</inlineHelpText>
        <label>Neustar Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Neustar_Verification_MPIC_Date__c</fullName>
        <inlineHelpText>&lt;blank&gt; - Neustar call out hasn&apos;t been made</inlineHelpText>
        <label>Neustar Verification MPIC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Enabled_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag pushed from JH signifying if SMS enabled for customer</description>
        <label>SMS Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Last_Verified_Date_SFDC2__c</fullName>
        <description>Reflects the Last Date SMS was verified</description>
        <label>SMS Last Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accurint</fullName>
                </value>
                <value>
                    <fullName>Accurint - XML</fullName>
                </value>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Special Batch</fullName>
                </value>
                <value>
                    <fullName>Lead Source</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Fast Busy</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Ring No Answer</fullName>
                </value>
                <value>
                    <fullName>Spoke to Customer</fullName>
                </value>
                <value>
                    <fullName>VM Confirmed</fullName>
                </value>
                <value>
                    <fullName>VM Full</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Phone Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone_Number__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Do_not_Call_List__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Neustar_MPIC_Phone_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PH-{00}</displayFormat>
        <label>Phone Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <recordTypes>
        <fullName>Person_Account_SFDC2</fullName>
        <active>true</active>
        <description>Used for Consumer Person Account SFDC2</description>
        <label>Person Account SFDC2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone_Number</fullName>
        <active>true</active>
        <description>Record type for phone number page layout</description>
        <label>Phone Number</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>